DSS-4079: Alignment issue multi select dropdown (#1977)
* DSS-3571 design changes

* discharge info design changes

* vessel card height changes in shore dashboard

* DSS-4079 Alignment issue in multiselect drop down all over the application

--- a/web/cpdss-portal/apps/cpdss/src/app/business/operations/loading-discharging-cargo-details/loading-discharging-cargo-details.component.scss
+++ b/web/cpdss-portal/apps/cpdss/src/app/business/operations/loading-discharging-cargo-details/loading-discharging-cargo-details.component.scss
@@ -1,4 +1,4 @@
 .table-sidebar-discharging{
     min-width: 400px!important;
-    min-width: 400px!important;
+    max-width: 400px!important;
 }
